--- a/.harness/orgs/Ng_Pipelines_K8s_Organisations/projects/kushal_test/pipelines/feat24/input_sets/inputmain.yaml
+++ b/.harness/orgs/Ng_Pipelines_K8s_Organisations/projects/kushal_test/pipelines/feat24/input_sets/inputmain.yaml
@@ -16,4 +16,4 @@ inputSet:
                     identifier: Wait_1
                     type: Wait
                     spec:
-                      duration: 10s
+                      duration: 10m
